<resources>
    <string name="app_name">AllAboutSamsung</string>
    <string name="article_image">Artikelbild</string>
    <string name="network_error">Leider gab es einen Fehler beim Verbindungsaufbau.</string>
    <string name="server_error">Ungültige Antwort erhalten.</string>
    <string name="post">Artikel</string>
    <string name="comments">Kommentare</string>
    <string name="legal_notice">Impressum</string>
    <string name="news_channel_name">News</string>
    <string name="news_channel_description">Liefert Benachrichtigungen über neue Artikel.</string>
    <string name="author_template">Von %1$s</string>
    <string name="use_dark_theme">Dunkles Theme immer benutzen</string>
    <string name="google_analytics_settings_reason">Google Analytics ermöglicht uns herauszufinden, woran ihr wirklich interessiert seid.</string>
    <string name="allow_google_analytics">Erlaube Google Analytics</string>
    <string name="preferences">Einstellungen</string>
    <string name="select_push_topics">Benachrichtigungsthemen auswählen</string>
    <string name="push_deals">Deal-Benachrichtigungen</string>
    <string name="categories">Kategorien</string>
    <string name="search">Suche</string>
    <string name="refresh">Aktualisieren</string>
    <string name="all_categories">Alle Kategorien</string>
    <string name="share">Teilen</string>
    <string name="share_post">Artikel teilen</string>
    <string name="breaking_highlight">+++ Breaking +++</string>
    <string name="breaking_featured_template">+++ [Breaking] %1$s +++</string>
    <string name="posts">Artikel</string>
    <string name="videos">Videos</string>
    <plurals name="new_videos">
        <item quantity="one">Es gibt ein neues Video!</item>
        <item quantity="other">Es gibt %d neue Videos!</item>
    </plurals>
    <string name="broken_connection">Verbindung fehlgeschlagen.</string>
    <string name="loading">Lade…</string>
    <string name="loading_providers">Drittanbieterliste wird geladen…</string>
    <string name="gdpr_mode">Privater Modus</string>
    <string name="gdpr_mode_summary">Bei Aktivierung werden keine Daten an Dritte übermittelt. Dies deaktiviert einige Funktionen und ein Geräteneustart wird erforderlich, um die Änderungen anzuwenden.</string>
    <string name="privacy">Datenschutz</string>
    <string name="third_party_services">Drittanbieterdienste</string>
    <string name="close">Schließen</string>
    <string name="third_party_disallow">Drittanbieter nicht erlauben</string>
    <string name="third_party_allow">Drittanbieter erlauben</string>
    <string name="consent_summary">Diese App verwendet Dienste von Drittanbietern, um diverse Funktionen bereitzustellen. Dazu gehören zum Beispiel YouTube und Anzeigen von Google. Du kannst diese Dienste deaktivieren, jedoch werden dadurch einige Funktionen unbenutzbar.</string>
    <string name="third_party_display">Drittanbieter anzeigen</string>
    <array name="thirdPartyServices">
        <item>YouTube</item>
        <item>Google Analytics</item>
        <item>Drittanbieterinhalte in Artikeln</item>
        <item>Google AdSense / Admob</item>
    </array>
    <string name="third_party_service_ad">Werbeanzeigen von %s</string>
    <string name="broken_link">Entschuldigung, der Link scheint ungültig zu sein.</string>
</resources>
